Fix : Padding in header,filter-options, Fix:overflow of list items

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,11 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+#header{
+  display: inline-block;
+  padding-top: 3%;
+}
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -145,14 +150,12 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
